tests/rosetta/out/Smalltalk/averages-arithmetic-mean.out
/workspace/mochi/tests/rosetta/out/Smalltalk/averages-arithmetic-mean.st:15: parse error, expected '|' or identifier
